fixed scroll bar for overflow

--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ th:hover {
 #customInputDiv {
   height: 10vw;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 /*Input Field */
